# pj01_2025

./: .gitignore  CMakeLists.txt  README.md  cmake_config.yaml  commands.py  commands.yaml  run.py
include/: calc.h  sample.h
src/: calc.cpp  client  client.cpp  main.cpp  sample.cpp  server  server.cpp
src/exe/: client  server
test/: calc_test.cpp  sample_test.cpp
test/exe/: MyTest
